# uncloud

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.server  Dockerfile.web  LICENSE  README.md  TESTING.md  build-android.sh  build-desktop.sh  config.example.yaml  config.test.yaml  docker-compose.playwright.yml  docker-compose.yml  nginx.conf  pubkey.gpg  run-e2e-tests.sh
crates/uncloud-client/: Cargo.toml
crates/uncloud-client/src/: error.rs  lib.rs
crates/uncloud-common/: Cargo.toml
crates/uncloud-common/src/: client.rs  lib.rs  validation.rs
crates/uncloud-common/src/api/: auth.rs  duplicates.rs  events.rs  files.rs  finance.rs  folder_shares.rs  folders.rs  mail.rs  mod.rs  music.rs  playlists.rs  preferences.rs  search.rs  shares.rs  shopping.rs  subsonic.rs  sync_events.rs  tasks.rs  vault_recents.rs  versions.rs
crates/uncloud-desktop/: Cargo.toml  build.rs  tauri.android.conf.json  tauri.conf.json
crates/uncloud-desktop/capabilities/: default.json
crates/uncloud-desktop/src/: android_fs.rs  file_watcher.rs  lib.rs  main.rs  secret_store.rs
crates/uncloud-desktop/src-frontend/: index.html  preferences.html
crates/uncloud-desktop/src-frontend/assets/: tailwind-dxh31919b74dc492355.css  tailwind-dxh58d373e65ed849b.css  tailwind-dxh69ecaaa3f381292.css  tailwind-dxh71153374b93c547.css  tailwind-dxh7398030f4c8a87.css  tailwind-dxhcc36cddf9bfcbefe.css  uncloud-web-dxh288bfa53ce6a71ab.js  uncloud-web-dxh55e2fdd95357299b.js  uncloud-web-dxh5a7ed5a29e658443.js  uncloud-web-dxh5c8b312322f7c6fd.js  uncloud-web-dxh69b6f54ea3ed86db.js  uncloud-web-dxh711eea2a9df4d031.js  uncloud-web-dxh964115364817da44.js  uncloud-web-dxh9e76f1dd36c04bea.js  uncloud-web-dxha81e9588f8d98f6e.js  uncloud-web-dxhacc281b04629132.js  uncloud-web-dxhb515969d44a637.js  uncloud-web-dxhdae721e353f4c27f.js  uncloud-web-dxhf67dd8d5e415c02f.js  uncloud-web-dxhf76c98fb52ef682.js  uncloud-web_bg-dxh1a249ea15e14bca.wasm  uncloud-web_bg-dxh4938857699977d56.wasm  uncloud-web_bg-dxh4c34dab181d8491.wasm  uncloud-web_bg-dxh61e779168f6d9d7.wasm  uncloud-web_bg-dxh6a12a7b9212b41c9.wasm  uncloud-web_bg-dxh6e9a1e79d051769.wasm  uncloud-web_bg-dxh82f4929e5d4536c2.wasm  uncloud-web_bg-dxh847f1c41f71774f2.wasm  uncloud-web_bg-dxh9441ca7eee651bd.wasm  uncloud-web_bg-dxh9957c553ad63b8dc.wasm  uncloud-web_bg-dxh9f9d11aa51fb83f3.wasm  uncloud-web_bg-dxhb5d591b06f41e9b4.wasm  uncloud-web_bg-dxhcc679936857ae0c.wasm  uncloud-web_bg-dxhcf91fe846c24c37e.wasm
crates/uncloud-server/: Cargo.toml
crates/uncloud-server/src/: config.rs  db.rs  error.rs  finance_rules.rs  frontend.rs  lib.rs  main.rs  migrate.rs  supervisor.rs
crates/uncloud-server/src/backup/: config.rs  create.rs  dump.rs  lock.rs  manage.rs  mod.rs  repo.rs  restore.rs  source.rs  uri.rs
crates/uncloud-server/src/finance_import/: mod.rs  sparkasse_camt_v8.rs
crates/uncloud-server/src/mcp/: handler.rs  jsonrpc.rs  mod.rs  path.rs
crates/uncloud-server/src/middleware/: auth.rs  feature.rs  mod.rs  request_meta.rs  scope.rs  sigv4.rs
crates/uncloud-server/src/models/: api_token.rs  app.rs  backup_lock.rs  file.rs  finance.rs  folder.rs  folder_share.rs  invite.rs  mail.rs  migration_lock.rs  mod.rs  music_category.rs  oauth_authorization_code.rs  oauth_client.rs  playlist.rs  s3_credential.rs  session.rs  sftp_host_key.rs  share.rs  shopping.rs  storage.rs  subsonic.rs  sync_event.rs  task.rs  totp_challenge.rs  user.rs  user_preferences.rs  webhook.rs
crates/uncloud-server/src/processing/: audio_metadata.rs  mod.rs  search_index.rs  service.rs  text_extract.rs  thumbnail.rs
crates/uncloud-server/src/routes/: admin_processing.rs  apps.rs  audit.rs  auth.rs  duplicates.rs  events.rs  files.rs  finance.rs  folder_shares.rs  folders.rs  invites.rs  mail.rs  mod.rs  music.rs  oauth.rs  playlists.rs  s3.rs  s3_credentials.rs  search.rs  shares.rs  shopping.rs  storages.rs  subsonic.rs  sync_events.rs  task_items.rs  tasks.rs  tokens.rs  trash.rs  users.rs  vault_recents.rs  versions.rs
crates/uncloud-server/src/services/: auth.rs  events.rs  mail.rs  mail_blob.rs  mod.rs  rescan.rs  search.rs  secrets.rs  sharing.rs  storage.rs  sync_log.rs
crates/uncloud-server/src/storage/: local.rs  mod.rs  retry.rs  s3.rs  sftp.rs
crates/uncloud-server/tests/: auth.rs  auth_e2e.rs  backup.rs  files.rs  finance_categories.rs  finance_import.rs  finance_reconcile.rs  finance_rules.rs  finance_settlements.rs  folders.rs  mcp.rs  music_artists.rs  music_search.rs  oauth.rs  storage_migration.rs  storage_s3.rs  storage_sftp.rs  subsonic.rs  sync.rs  sync_engine.rs
crates/uncloud-server/tests/common/: mod.rs
crates/uncloud-sync/: Cargo.toml
crates/uncloud-sync/migrations/: 001_initial.sql  002_nullable_folder_strategy.sql  003_sync_log.sql  004_local_deletion_tracking.sql
crates/uncloud-sync/src/: engine.rs  fs.rs  journal.rs  lib.rs  sentinel.rs
crates/uncloud-sync/tests/: client_creates_local.rs  local_deletion_tracking.rs  no_double_push.rs  server_deletion_echo.rs
crates/uncloud-web/: Cargo.toml  Dioxus.toml  build.rs  index.html  input.css  package-lock.json  package.json  tailwind.config.js
crates/uncloud-web/src/: app.rs  mail_editor.js  main.rs  router.rs  state.rs
crates/uncloud-web/src/components/: activity.rs  context_menu.rs  dashboard.rs  download_toast.rs  duplicates.rs  file_browser.rs  file_item.rs  file_open_viewer.rs  file_properties.rs  file_viewer.rs  finance.rs  folder_share_dialog.rs  gallery.rs  icons.rs  layout.rs  lightbox.rs  mail.rs  mod.rs  oauth_consent.rs  passwords.rs  player.rs  right_drawer.rs  scroll_sentinel.rs  search.rs  session_toast.rs  settings.rs  setup.rs  share_dialog.rs  shared_with_me.rs  shares_page.rs  shopping.rs  sidebar.rs  trash.rs  upload.rs  version_history.rs
crates/uncloud-web/src/hooks/: api.rs  biometric.rs  media_session.rs  mod.rs  native_audio.rs  tauri.rs  use_apps.rs  use_auth.rs  use_drag_cleanup.rs  use_duplicates.rs  use_events.rs  use_file_opener.rs  use_files.rs  use_finance.rs  use_folder_shares.rs  use_mail.rs  use_music.rs  use_music_categories.rs  use_oauth.rs  use_player.rs  (+11 more)
(+87 files in other folders)
