[workspace]
resolver = "2"
members = [
    "crates/uncloud-server",
    "crates/uncloud-common",
    "crates/uncloud-web",
    "crates/uncloud-client",
    "crates/uncloud-sync",
    "crates/uncloud-desktop",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Uncloud Contributors"]

[workspace.dependencies]
# Shared across crates
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }

# Server dependencies
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3"
argon2 = "0.5"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = { version = "0.1", features = ["sync"] }
async-trait = "0.1"
mime_guess = "2"
sha2 = "0.10"
hex = "0.4"
serde_yaml = "0.9"
futures = "0.3"

# Frontend dependencies
dioxus = { version = "0.7", features = ["web", "router"] }
