[package]
name = "uncloud-client"
version.workspace = true
edition.workspace = true

[dependencies]
uncloud-common = { path = "../uncloud-common" }

serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
futures.workspace = true
tracing.workspace = true
tokio.workspace = true

reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "stream", "multipart", "rustls-tls"] }
tokio-util = { version = "0.7", features = ["io"] }
