[package]
name = "uncloud-desktop"
version.workspace = true
edition.workspace = true

[lib]
name = "uncloud_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uncloud-client = { path = "../uncloud-client" }
uncloud-sync = { path = "../uncloud-sync" }
uncloud-common = { path = "../uncloud-common" }

tauri = { version = "2", features = ["tray-icon", "rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-android-fs = "28"
tauri-plugin-native-audio = { path = "../../vendor/tauri-plugin-native-audio" }
dirs = "5"
hostname = "0.4"
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

# Credential storage fallback (when OS keyring is unavailable): AES-GCM
# with a build-time-embedded key. See build.rs + secret_store.rs.
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"

# OS keyring + autostart + filesystem watcher — only on the three desktop
# platforms. Android has its own keystore APIs and a different autostart
# story; SAF is what surfaces filesystem changes there.
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
notify = "6"
# Register the desktop app to auto-launch at OS login. Default-on on
# first run; user can toggle via Settings.
tauri-plugin-autostart = "2"
# Self-update: checks the GitHub Releases manifest, downloads the signed
# bundle, runs the platform installer in-place. Windows uses the bundled
# NSIS .exe; Linux users on Fedora install via COPR (`dnf upgrade`) so
# the updater is intentionally a no-op for them — the plugin still
# returns "no update" rather than failing, which is the right UX.
tauri-plugin-updater = "2"

[[bin]]
name = "uncloud-desktop"
path = "src/main.rs"
