[package]
name = "uncloud-server"
version.workspace = true
edition.workspace = true

[lib]
name = "uncloud_server"
path = "src/lib.rs"

[[bin]]
name = "uncloud-server"
path = "src/main.rs"

[dependencies]
uncloud-common = { path = "../uncloud-common" }

# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
axum.workspace = true
tokio.workspace = true
mongodb.workspace = true
bson = { version = "2", features = ["chrono-0_4"] }
argon2.workspace = true
rand.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
mime_guess.workspace = true
sha2.workspace = true
hex.workspace = true
serde_yaml.workspace = true
futures.workspace = true

# Additional server deps
axum-extra = { version = "0.10", features = ["cookie"] }
tower-cookies = "0.11"
base64 = "0.22"
libc = "0.2"
tokio-util = { version = "0.7", features = ["io"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.5"
lofty = "0.22"
meilisearch-sdk = "0.28"
pdf-extract = "0.7"
hmac = "0.12"
totp-rs = { version = "5", features = ["otpauth", "qr", "gen_secret"] }
http-body-util = "0.1"
subtle = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
urlencoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
rust-embed = { version = "8", features = ["mime-guess"] }
clap = { version = "4", features = ["derive"] }
aws-sdk-s3 = { version = "1", default-features = false, features = ["behavior-version-latest", "rt-tokio", "rustls"] }
aws-credential-types = "1"
aws-smithy-types = { version = "1", features = ["rt-tokio"] }
russh = "0.60"
russh-sftp = "2"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["mongo"] }
axum-test = "17"
tempfile = "3"
uncloud-sync = { path = "../uncloud-sync" }
uncloud-client = { path = "../uncloud-client" }
uncloud-common = { path = "../uncloud-common" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
