[package]
name = "uncloud-web"
version.workspace = true
edition.workspace = true

[dependencies]
uncloud-common = { path = "../uncloud-common" }

dioxus.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true

# Web-specific
gloo-net = "0.6"
gloo-storage = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlInputElement",
    "FileList",
    "File",
    "FormData",
    "Blob",
    "EventSource",
    "MessageEvent",
    "Navigator",
    "Clipboard",
    "RequestCredentials",
    "MediaQueryList",
    "Blob",
    "HtmlMediaElement",
    "HtmlAudioElement",
    "AddEventListenerOptions",
    "DomTokenList",
    "ScrollIntoViewOptions",
    "ScrollBehavior",
    "HtmlTextAreaElement",
    "BlobPropertyBag",
    "Crypto",
    "IntersectionObserver",
    "IntersectionObserverInit",
    "IntersectionObserverEntry",
] }
js-sys = "0.3"
futures = "0.3"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
keepass = { git = "https://github.com/decaychain/keepass-rs", features = ["save_kdbx4"] }
uuid = { version = "1", features = ["v4", "js"] }
console_error_panic_hook = "0.1"
